syntax = "proto3";
package GreeterApi;
option java_multiple_files = true;
option java_package = "com.amannmalik.grpc";
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}
